# data_quality_check

./: .gitignore  LICENSE  README.md  notebook.ipynb  pyproject.toml  setup.py
data_quality_tool/: __init__.py  __main__.py  quality_check.py
tool/: __main__.py  quality_check.py
