[build-system]
requires = ["setuptools>=42", "wheel", "pip==24"]
build-backend = "setuptools.build_meta"

[project]
name = "data-standards-check"
version = "0.2(test)"
description = "A tool to check data quality against predefined standards and generated data standards if needed."
readme = { file = "README.md", content-type = "text/markdown" }
license = {file = "LICENSE"}
requires-python = ">=3.6"
authors = [
    { name = "Xifan.Z", email = "xifanzou42@gmail.com" },
]
dependencies = [
    "pandas",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/xifanzou/data_standards_check"

[project.scripts]
data_check = "data_quality_tool.__main__:main"
